--- a/map/index.html
+++ b/map/index.html
@@ -46,6 +46,7 @@
                 <li><a href="http://getbootstrap.com/" target="_blank">Bootstrap</a> (MIT license)
                 <li><a href="http://jquery.com/" target="_blank">jQuery</a> (MIT license)
                 <li><a href="https://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a> (SIL OFL 1.1)
+                <li><a href="https://github.com/midoriit/Tweet2LinkData" target="_blank">Tweet2LinkData</a> (CC BY-SA 4.0)
               </ul>
             </p>
           </div>
